@@ -2522,8 +2522,14 @@ setRlibs <-
                 }
             } else resultLog(Log, "OK")
 
-            if (do_build_vignettes &&
-                parse_description_field(desc, "BuildVignettes", TRUE)) {
+            build_vignettes <-
+                parse_description_field(desc, "BuildVignettes", TRUE)
+            if (!build_vignettes && as_cran) {
+                ## FOSS packages must be able to rebuild their vignettes
+                info <- analyze_license(desc["License"])
+                build_vignettes <- info$is_verified
+            }
+            if (do_build_vignettes && build_vignettes) {
                 checkingLog(Log, "re-building of vignette PDFs")
                 ## copy the whole pkg directory to check directory
                 ## so we can work in place, and allow ../../foo references.
@@ -2571,7 +2577,7 @@ setRlibs <-
                     resultLog(Log, "OK")
                 }
             } else {
-                checkingLog(Log, "re-building of vignettes")
+                checkingLog(Log, "re-building of vignette PDFs")
                 resultLog(Log, "SKIPPED")
             }
         } else {
